--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
     <!-- Section 2 -->
     <section id="section2">
-        <!-- Embed your content here -->
-        <iframe src="https://www.coolmathgames.com"></iframe>
+        <!-- Embed y8games.com here -->
+        <iframe src="https://www.y8.com"></iframe>
     </section>
 </body>
 </html>
